desktop/core/src/desktop/static/desktop/less/hue.less
/*
 Licensed to Cloudera, Inc. under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  Cloudera, Inc. licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
*/
@import (reference) "cui/colors.less";
@import (reference) "hue-attributes.less";

@import "hue-assist";
@import "hue-autocomplete";
@import "hue-cui-overrides.less";
@import "hue-cross-version.less";

html {
  height: 100%;
  width: 100%;
  margin: 0;
  font-size: 1em;
}

body {
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.main-page {
  position: relative;
  .display-flex;
  .flex-direction(column);
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.content-wrapper {
  .flex(1 1 100%);
  .display-flex;
  .flex-direction(row);
  position: relative;
  width: 100%;
  background-color: @cui-white;
}

.svg-hue-logo-main {
  fill: @hue-primary-color-dark;
}

.svg-hue-logo-trunk {
  fill: #D7B9EB;
}

.top-nav {
  .display-flex;
  position: relative;
  z-index: 1049;
}

.top-nav-left {
  .flex(0 0 300px);
}

.top-nav-middle {
  .flex(1);
  width: 100%;
}

.top-nav-right {
  .flex(0 0 300px);
}

.jobs-panel {
  position: fixed;
  z-index: 2999;
  top: 45px;
  padding: 10px;
  max-height: 350px;
  width: 400px;
  right: 10px;
  font-size: 13px;
  border-radius: @hue-panel-border-radius;
  background-color: @cui-white;

  .hue-box-shadow-top;
}

.notification-history {
  overflow-y: auto;
  max-height: 270px;
}

.notification-history-title {
  background-color: @cui-gray-050;
  padding: 4px;
}

.notification-history-list li {
  padding: 4px;
}

.compose-action {
  margin-top: 10px;
  z-index: 999999;
  line-height: 20px;
  border-radius: 4px;
}

.compose-action:hover .btn {
  background-color: rgba(240, 240, 240, 0.6);
}

.compose-action .btn {
  color: @hue-primary-color-dark;
  border: 1px solid transparent;
  background-color: transparent;
  background-image: none;
  font-weight: 600;
  font-size: 14px;
  .hue-ease-transition(~"background-color, color");
}

.compose-action .btn:hover {
  background-color: rgba(240, 240, 240, 0.92);
  color: @hue-primary-color-dark;
}

.jobs-badge {
  color: @hue-primary-color-dark;
  background-color: @cui-gray-050;
  float: right;
  margin-left: 4px;
  padding: 1px 5px;
  border-radius: 10px;
  font-size: 12px;
  .hue-ease-transition(~"background-color, color");
}

.compose-action .btn:hover .jobs-badge {
  background-color: @hue-primary-color-dark;
  color: rgba(240, 240, 240, 0.92);
}

.compose-action .btn:first-child:active,
.compose-action .btn:first-child {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  padding-bottom: 2px;
  box-shadow: none;
}

.compose-action .btn:last-of-type:not(:first-child) {
  padding-left: 1px;
}

.compose-action .btn:last-of-type {
  margin-left: 0;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  box-shadow: none;
}

.compose-action .dropdown-menu img {
  height: 18px;
  width: 18px;
  margin: -1px 2px 0 -7px;
}

.compose-action .dropdown-menu i {
  color: @hue-primary-color-dark;
  height: 18px;
  width: 18px;
  font-size: 14px;
  margin: -1px 2px 0 -7px;
}

.compose-action .dropdown-menu li {
  height: 32px;
}

.compose-action .dropdown-menu li a {
  line-height: 32px;
}

.compose-action .dropdown-submenu>a:after {
  margin-top: 11px;
}

.compose-action .dropdown-menu li.divider {
  height: 1px;
  margin: 5px 0;
}

.compose-action.open .dropdown-toggle:not(:hover) {
  background-color: transparent !important;
}

.dropdown-no-icon {
  margin-left: 17px;
}

.top-nav-middle .search-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 600px;
}

.search-container {
  .display-flex;
  .flex(1 1 37px);
  position: relative;
  margin: 8px 10px 0 10px;
}

.search-container > input {
  .flex(1 1 100%);
  border-radius: 4px 0 0 4px;
  border: 1px solid @cui-gray-300;
  border-right: none;
  box-shadow: none;
  margin-bottom: 0;
}

.search-container > a {
  .flex(0 0 31px);
  margin-bottom: 0;
  cursor: pointer;
  border-bottom-right-radius: 4px;
  border-top-right-radius: 4px;
  border: 1px solid @cui-gray-300;
  box-shadow: none;
  font-size: 15px;
  line-height: 29px;
  background-color: @cui-gray-050;
  width: 31px;
}

.search-container > a > i {
  margin-left: 8px;
}

.left-panel,
.right-panel {
  .flex(0);
  position: relative;
  background-color: @cui-white;
  min-width: 250px;
}

.side-panel-closed {
  min-width: 0;
  .flex-basis(0) !important;
  width: 0 !important;
}

.resizer {
  .flex(0);
  height: 100%;
  min-width: 4px;
  cursor: col-resize;
}

.resize-bar {
  position: absolute;
  height: 100%;
  width: 2px;
  background-color: @cui-gray-050;
}

.page-content {
  .flex(1);
  position: relative;
  overflow-x: hidden !important;
}

.page-content .content-panel {
  overflow-y: auto;
  overflow-x: hidden;
}

.left-nav {
  position:absolute;
  background-color: @hue-primary-color-dark;
  color: @cui-gray-050;
  z-index: 1048;
  top: 0;
  left: 0;
  bottom: 0;
  width: 0;
  overflow-x: hidden;
  white-space: nowrap;
  .hue-ease-transition(width);
}

.left-nav-menu {
  padding-bottom: 60px;
  margin: 10px 0 0 0;
}

.left-nav-menu li.header {
  text-transform: uppercase;
  letter-spacing: 1px;
}

.left-nav-menu li {
  padding-left: 15px;
  list-style: none;
  line-height: 33px;
  height: 33px;
}
/* ... */

